refactor: 가장 많이 이동한 자동차들을 찾는 기능 수정