@@ -6,6 +6,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -44,7 +45,7 @@ class CarsTest {
     @DisplayName("가장 멀리 이동한 자동차들을 찾을 수 있다.")
     void findCarsAtMaxPosition() {
         cars = new Cars(
-                List.of(new Car("pobi", 3), new Car("crong", 1), new Car("honux", 3))
+                Arrays.asList(new Car("pobi", 3), new Car("crong", 1), new Car("honux", 3))
         );
         List<Car> carsAtMaxPosition = cars.findCarsAtMaxPosition();
 
